--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ html {
 
 .dark .box {
   background-color: rgb(29, 6, 6);
+  box-shadow: 1px 2px 6px #452020;
 }
 
 .flex {
@@ -63,7 +64,7 @@ html {
 .div9 { grid-area: 4 / 7 / 5 / 9; }
 
 
-@media (max-width: 769px) {
+@media (max-width: 968px) {
   .parent {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -81,4 +82,44 @@ html {
     .div7 { grid-area: 4 / 2 / 5 / 3; }
     .div8 { grid-area: 5 / 2 / 7 / 3; }
     .div9 { grid-area: 5 / 3 / 7 / 4; }
+}
+
+@media (max-width: 524px) {
+  .parent {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .div1 {
+      order: 2;
+      position: absolute;
+      width: calc(100vw - 20px);
+      top: 41px;
+      box-shadow: 0px 6px 6px #aeaeae;
+      border-radius: 0px 0px 4px 4px;
+    }
+    .div2 {
+      order: 1;
+    }
+    .div3 {
+      order: 3;
+    }
+    .div4 {
+      order: 4;
+    }
+    .div5 {
+      order: 5;
+    }
+    .div6 {
+      order: 6;
+    }
+    .div7 {
+      order: 7;
+    }
+    .div8 {
+      order: 8;
+    }
+    .div9 {
+      order: 9;
+     }
 }
