--- a/src/TopBar/styles.css
+++ b/src/TopBar/styles.css
@@ -1,4 +1,4 @@
-.searchbar {
+.topbar {
     justify-content: space-between;
 }
 
@@ -60,5 +60,9 @@
         width: 30px;
         height: 30px;
         display: initial;
+    }
+    .btn-hamburger svg {
+        width: 20px;
+        height: 20px;
     }
 }
